public/assets/css/style.css
html {
   background-color: #FFC04C;
}

body {
   width: 75%;
   margin: 0 auto;

   display: flex;
   min-height: 100vh;
   flex-direction: column;
   background-color: white;
}

#cute_burger {
   display: block;
   margin: auto;
}

h1 {
   text-align: center;
   font-family: 'Fontdiner Swanky', cursive;
   font-size: 65px;
   margin: 50px;
}

.burgerAvailable {
   font-family: 'Crafty Girls', cursive;
   font-weight: normal;
   font-size: 20px;
   text-align: center;

   border-radius: 25px;
   width: 100%;
   margin: 10px;
   padding: 10px;
   background-color: #b7ffc2;
   border: none;
}

.burgerAvailable:hover {
   background-color: #81ff94;
}

.burgerEaten {
   font-family: 'Crafty Girls', cursive;
   font-weight: normal;
   font-size: 20px;
   text-align: center;

   border-radius: 25px;
   margin: 10px;
   padding: 10px;
   background-color: #ffd1c9;
}

h2 {
   text-align: center;
   font-family: 'Fontdiner Swanky', cursive;
   font-size: 40px;
   margin: 50px;
}

.formContainer {
   background-color: orange;
}

.addBurgerButton {
   font-family: 'Crafty Girls', cursive;
   font-weight: normal;
   font-size: 20px;
   text-align: center;

   border-radius: 25px;
   width: 100%;
   margin: 0;
   padding: 10px;
   background-color: #FFC04C;
   border: none;
}

.addBurgerButton:active {
   background-color: #FFC04C;
}

.burgerFooter {
   background-color: #FFC04C;
   padding: 20px 0;
}

